# sweetspot_cpp

./: .clang-format  .ctags  .gitignore  CMakeLists.txt  main.cpp  sweetspot.conf  tags
.cache/clangd/index/: af_packet_runner.cpp.24860E3EC961533B.idx  checksum.hpp.55620BC74AFD5CE1.idx  committer.h.EF7883F59C9B51AA.idx  committer_icmp.cpp.532C32C03BDF64BE.idx  committer_ipv4.cpp.2D5396E30331EDBA.idx  detail_method.cpp.B719C1F03A2E2035.idx  detail_method.hpp.5D56A229F4AD53D0.idx  dnat_table.hpp.1F24A38F3AC05D06.idx  endpoint_base.hpp.7528293246E5C5E5.idx  entry.hpp.8B1D8E3954B3BE66.idx  ethernet.h.D333396853A43766.idx  filter.h.7AF1A915029EB96C.idx  filter_engine.cpp.AB8298627F04474C.idx  filter_engine.hpp.67E7BCFA01FA35D7.idx  filter_icmp.cpp.946A1D388BEF6E81.idx  filter_ipv4.cpp.5A0F9BC751C5DE2F.idx  filter_runtime.cpp.077C145142114E76.idx  filter_runtime.hpp.B5FC9A02ED0E1C49.idx  filter_tcp.cpp.10146E55065EAD7D.idx  filter_udp.cpp.D7832D1B619A0D20.idx  forward_dec.h.1F108970627D7C0C.idx  gauge_tracker.cpp.1723CA7C595CA2DC.idx  gauge_tracker.hpp.38FE10535492BB46.idx  header_chain.h.F33B3809BD9E57C6.idx  icmp.h.714C185DAB548A4B.idx  io_context.hpp.B552883E471BF51C.idx  ipv4.h.0C5C8EF92D8AD259.idx  jenkins_hash.hpp.9C8D5B53ABB31558.idx  logger.h.66F48FB92EC7E87A.idx  main.cpp.0929271574377931.idx  manager.cpp.E89206FC5FA1E23E.idx  manager.hpp.F7629B44388DA68D.idx  method.hpp.57A9BBBCB5BF809B.idx  nat.cpp.E4CA14FCEB6FD1F3.idx  nat.h.49B9FE7DD61194DB.idx  nat_config.hpp.C5381C763B548BC5.idx  nat_icmp.cpp.DB09C67EA2959363.idx  nat_ipv4.cpp.748A4339ABA15326.idx  nat_tcp.cpp.F1364B72DBBBA5AC.idx  nat_udp.cpp.F198F02DF6FE71F1.idx  (+26 more)
acct/: detail_method.cpp  detail_method.hpp  entry.cpp  entry.hpp  gauge_tracker.cpp  gauge_tracker.hpp  manager.cpp  manager.hpp  method.hpp  scopes.cpp  scopes.hpp  snat_tracker.cpp  snat_tracker.hpp  types.cpp  types.hpp
af_packet_io/: checksum_utils.cpp  checksum_utils.h  io_context.cpp  io_context.hpp  packet_socket.cpp  packet_socket.hpp  ring_buffer.cpp  ring_buffer.hpp
apps/: af_packet_runner.cpp  sweetspot_daemon.cpp  uam_client.cpp
chain/: header_chain.h
committer/: committer.h  committer_icmp.cpp  committer_ipv4.cpp  committer_tcp.cpp  committer_udp.cpp
common/: checksum.cpp  checksum.hpp  dnat_table.cpp  dnat_table.hpp  jenkins_hash.hpp  logger.h  netset.cpp  netset.hpp  worker.cpp  worker.hpp
filters/: filter.h  filter_engine.cpp  filter_engine.hpp  filter_icmp.cpp  filter_ipv4.cpp  filter_runtime.cpp  filter_runtime.hpp  filter_tcp.cpp  filter_udp.cpp
filters/filters/: afimall  akson  alfabank-terminal  alfabank-terminal-test  anonymous  authonly  authonly-dev  baikalsr-dn  beeline  beeline-dn  beeoffice  blacklist  bosco-dn  cfhmsk  cfhmskdn  cfhspb2  default  demo  ditauthonly  ditauthonly-dev  ernstyoungup  example  formulakinodn  freedn  goldenwifi  hotwifi-dn  hotwifi-snets-up  httponly  httponly_no_cp  ingos726  irbisautoup  kfccafeup  kfcdn  kfcup  kidprotect  login-dn  mcdonalds-dn  mercedesdn  mosgu  msu  (+78 more)
include/: ethernet.h  forward_dec.h  icmp.h  ipv4.h  tcp.h  udp.h
nat/: checksum_utils.hpp  endpoint_base.hpp  nat.cpp  nat.h  nat_config.hpp  nat_icmp.cpp  nat_ipv4.cpp  nat_tcp.cpp  nat_udp.cpp
parsers/: parser.h  parser_icmp.cpp  parser_ipv4.cpp  parser_tcp.cpp  parser_udp.cpp
sessions/: session.hpp  session_manager.cpp  session_manager.hpp
shape/: shape_controller.cpp  shape_controller.hpp
tests/: flow_dissector.c  flow_dissector.h  flow_hash.bt  hashrnd.bt  log_skb_hash_with_key.py  log_udp_hash.py  rxhash  rxhash.c  siphash.c  siphash.h  test_acct.cpp  test_checksum.cpp  test_fanout.cpp  test_filters.cpp  test_hash  test_nat.cpp  test_sessions.cpp  test_uam.cpp  test_udp_hash.cpp  test_workers.cpp
tests/data/: test_filters.conf
uam/: uam_message.cpp  uam_message.hpp  uam_server.cpp  uam_server.hpp
